Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10850

Dialogs having WS_EX_DLGMODALFRAME style does not display their icon

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.1
    • Win32SS
    • None

    Description

      Dialogs having WS_EX_DLGMODALFRAME style does not display their icon in ReactOS, whereas they do on Windows. See rostests's win32 sysicon test as a proof (and msconfig_new).

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              hbelusca hbelusca
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: