[WIN32K]: Fix display of window title icon for dialogs having the WS_EX_DLGMODALFRAME style. CORE-10850 #resolve CORE-10437 #comment The real fix was committed in r70715.

svn path=/trunk/; revision=70715